Render homepage content and embed Mautic forms (id=1, id=2)

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -43,4 +43,11 @@
         </div>
     </div>
 </section>
+
+<!-- Page Content (from content/_index.md) -->
+<section class="home-content">
+    <div class="container">
+        {{ .Content }}
+    </div>
+</section>
 {{ end }} 
